# background_foreground_segmentation

./: ._CMakeLists.txt  ._README.md  ._package.xml  ._run-clang-format.py  ._setup.py  .gitignore  CMakeLists.txt  Log_files.sh  README.md  RESULTS.md  Setup_BFS  data_setup.py  dependencies.rosinstall  log_results_from_sacred.py  package.xml  pretrained_models_and_configs.md  requirements.txt  requirements_brucker.txt  requirements_xavier.txt  rosbags.md  run-clang-format.py  setup.py  setup_ubuntu_2004.md  setup_xavier.md  submit_training_job.sh  train_fast_scnn_from_nyu_to_cla_ewc.sh  train_fast_scnn_from_nyu_to_cla_feature_distillation.sh  train_fast_scnn_from_nyu_to_cla_finetune.sh  train_fast_scnn_from_nyu_to_cla_finetune_freeze_encoder.sh  train_fast_scnn_from_nyu_to_cla_output_distillation.sh  train_multi_segmodel.py  xavier_setup.md
Nyu_depth_v2_labeled/: ._Nyu_depth_v2_labeled.py  .___init__.py  Nyu_depth_v2_labeled.py
Nyu_depth_v2_labeled/dummy_data/: ._TODO-add_fake_data_in_this_directory.txt
SemSegWithDepthExperiment_xception_DEEPLAB_0.0001lr_1bs_30ep_20201223_12-40-05/: results.csv  results_one_by_one_nyuARCHE.csv  results_one_by_one_nyuCLA.csv
SemSegWithDepthExperiment_xception_DEEPLAB_0.0001lr_1bs_30ep_20201224_12-31-42/: results.csv  results_one_by_one_nyuARCHE.csv  results_one_by_one_nyuCLA.csv
bfseg/: utils.py
config/: cla_dataset_creator_in_memory.yaml  cloud_coloring_rviz.rviz  default.yaml  dense_dataset_creator.yaml  dense_dataset_creator_lidar.yaml  dense_dataset_creator_plus_depth.yaml  finetuning.yaml  label_aggregator_cla.yaml  online_dataset_creator.yaml  pickelhaubevers_cam0_maplab.yaml  pickelhaubevers_cam1_maplab.yaml  pretraining.yaml  ros_image_publisher_default.yaml  segmented2_icp.rviz  segmented_icp.rviz  versavis_configuration.h
experiment_cfg/: README.md  dense_label_experiments.md  fast_scnn_from_nyu_to_cla_ewc.yml  fast_scnn_from_nyu_to_cla_feature_distillation.yml  fast_scnn_from_nyu_to_cla_finetune.yml  fast_scnn_from_nyu_to_cla_finetune_freeze_encoder.yml  fast_scnn_from_nyu_to_cla_output_distillation.yml  fast_scnn_nyu.yml  unet_nyu.yaml  unet_nyu.yml
experiment_cfg/defaults/: __init__.py  unet_nyu_finetune.py
experiment_cfg/distillation/: fast_scnn_from_nyu_to_cla_feature_distillation.yml  fast_scnn_from_nyu_to_cla_output_distillation.yml  fast_scnn_from_nyu_to_rumlang_feature_distillation.yml  fast_scnn_from_nyu_to_rumlang_output_distillation.yml
experiment_cfg/ewc/: fast_scnn_from_nyu_to_cla_ewc.yml  fast_scnn_from_nyu_to_office6_2502_ewc.yml  fast_scnn_from_nyu_to_rumlang_ewc.yml
experiment_scripts/: train_fast_scnn_from_nyu_to_cla_feature_distillation.sh  train_fast_scnn_from_nyu_to_cla_finetune_freeze_encoder.sh
launch/: capture_filtered_pc.launch  cla_label_projector_standalone_with_rviz.launch  dataset_creator.launch  dataset_creator_standalone.launch  dataset_creator_standalone_rviz.launch  mesh_positioning.launch  pointcloud_coloring.launch  pose_recorder.launch  vicon_pointcloud_projector.launch  vicon_transforms.launch
notebooks/: 0c83a12b-fda3-43af-bd4d-2a63c7769be3.csv  BaselineScores-Copy1.ipynb  Cross-Domain Localisation Results.ipynb  DumpClaDataset.ipynb  DumpHiveDataset.ipynb  EKF_Localization Analysis.ipynb  EvaluatePseudoLabels.ipynb  PlotCla.ipynb  PlotHiveDataset.ipynb  PlotHiveLabelsOfficeRumlang.ipynb  PlotPseudolabelsRumlang.ipynb  RSS Localisation Results.ipynb  ScoreAndVisualize.ipynb  TestReplayBuffer.ipynb  Untitled.ipynb  Untitled1.ipynb  check_loss.ipynb  convert francescos model.ipynb  data_loading.ipynb  dense_labels_visualizations.ipynb  evaluate pretrained NYU model.ipynb  evaluate_pretrained_nyu_model.py  evaluate_trajectory.ipynb  evaluate_trajectory_vicon.ipynb  online_learning.ipynb  preproc.ipynb  pseudo_label_eval.ipynb  pseudolabel inspection.ipynb  spix.ipynb  test.py  the_hive_download.ipynb  trajecotry_eval_cla.ipynb
self_supervised_segmentation/: README.md
self_supervised_segmentation/dataset_creator/: CMakeLists.txt  README.md  package.xml  setup.py
self_supervised_segmentation/dataset_creator/config/: default.yaml
self_supervised_segmentation/dataset_creator/include/dataset_creator/: dataset_creator.hpp
self_supervised_segmentation/dataset_creator/launch/: dataset_creator.launch  dataset_creator_standalone.launch  dataset_creator_standalone_rviz.launch
self_supervised_segmentation/dataset_creator/src/: dataset_creator.cpp
self_supervised_segmentation/meshdist_labler/: CMakeLists.txt  README.md  package.xml  setup.py
self_supervised_segmentation/meshdist_labler/config/: default.yaml
self_supervised_segmentation/meshdist_labler/include/meshdist_labler/: Labler.hpp  labler.hpp
self_supervised_segmentation/meshdist_labler/launch/: extrinsics.launch  meshdist_labler.launch  meshdist_labler_standalone.launch
self_supervised_segmentation/meshdist_labler/src/: Labler.cpp  labler.cpp  meshdist_labler_node.cpp
src/: ._background_foreground_segmentation_node.cpp  ._dataset_creator.cpp  ._setup.py  ._train_binary_segmodel_EWC.py  ._train_binary_segmodel_L2.py  ._train_multi_segmodel.py  CountNonEmptyPixels.py  Experiment_Guidelines.md  Untitled.ipynb  background_foreground_segmentation_dense_node.cpp  background_foreground_segmentation_node.cpp  background_foreground_segmentation_node2.cpp  cloud_coloring_node.cpp  cloud_filtering_node.cpp  dataset_creator.cpp  dataset_creator2.cpp  dataset_creator_dense.cpp  dataset_creator_node.cpp  deeplab_training.py  evaluate pretrained NYU model_brucker.ipynb  evaluate_dense_models_xavier.ipynb  evaluate_on_all_datasets.py  evaluate_pretrained_models_xavier.ipynb  evaluate_realsense_localization.ipynb  evaluate_sparse_models_xavier.ipynb  inference_node.py  label_aggregator.py  label_aggregator_all.py  label_aggregator_combined.py  loadBaselineData.py  meshdist_finetuning.py  nyu_pretraining.py  nyu_subsampling.py  online_learning.py  online_learning_dense.py  point_logger.py  pose_logger.py  pose_recorder_node.cpp  ros_image_publisher.py  sacred_utils.py  (+24 more)
tests/: test_metrics.py
(+424 files in other folders)
